syntax = "proto3";

package chat;

option go_package = "/proto/protopb;protopb";

service ChatService {
  rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);
  rpc CloseChat(CloseChatRequest) returns (CloseChatResponse);
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc StreamMessages(stream Message) returns (stream Message);
}

message CreateChatRequest {
    string chat_id = 1;
    string name = 2; 
    string algorithm = 3; 
    string mode = 4;     
    string padding = 5;  
    repeated string participants = 6;
}

message CreateChatResponse {
    string chat_id = 1;
}

message CloseChatRequest {
    string chat_id = 1;
}

message CloseChatResponse {
    bool success = 1;
}

message SendMessageRequest {
    string chat_id = 1;
    string sender = 2;
    bytes encrypted_message = 3;
    string message_type = 4; 
    string file_name = 5;   
    int32 chunk_index = 6;  
    int32 total_chunks = 7; 
    string message = 8;
  }
  
  message SendMessageResponse {
    bool success = 1;
    string message =2;
  }
  
  message StreamMessagesRequest {
    string chat_id = 1;
  }  

  message Message {
    string message_id = 1; 
    string chat_id = 2;
    string sender_id = 3;
    string sender_name = 4;
    bytes encrypted_message = 5;
    string created_at = 6;
    string message_type = 7; 
    string file_name = 8;    
    int32 chunk_index = 9;   
    int32 total_chunks = 10;  
    string algorithm = 11; 
    string mode = 12;        
    string padding = 13;   
}